--- a/Titanic using RF.ipynb
+++ b/Titanic using RF.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In this notebook, we will predict which passengers survived the disaster and which did not using Random Forest from scikit-learn library."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Load in some libraries."
    ]
   },
